# rem_math

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yaml  release.yml
benches/: common.rs  common_benchmark_test.py  sum_of_arrays_benchmark_test.py
criterion/array accumulation with simd instructions/base/: estimates.json  raw.csv
criterion/array accumulation with simd instructions/new/: benchmark.json  sample.json  tukey.json
criterion/array accumulation with simd instructions/report/: index.html
criterion/array accumulation/base/: raw.csv  tukey.json
criterion/array accumulation/new/: benchmark.json  estimates.json  sample.json
criterion/array accumulation/report/: index.html
criterion/report/: index.html
java/: Cargo.toml  RemMath.h  RemMath.java
java/src/: lib.rs
rem_math_gpu/: Cargo.toml
rem_math_simd/: Cargo.toml
rem_math_simd/src/: lib.rs
rmath/: run.py
src/: gpu.rs  kernel.cl  lib.rs  native.rs
tests/: test_arrays.rs
