[package]
name = "rem_math"
version = "0.2.9"
edition = "2021"

[lib]
name = "rem_math"
crate-type = ["cdylib", "rlib"]

[dependencies]
numpy = "0.25.0"
pyo3 = { version = "0.25.1", features = ["extension-module"] }
rayon = "1.10.0"
anyhow = "1.0"

[dependencies.rem_math_gpu]
path = "rem_math_gpu"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "common"
harness = false

[profile.release]
lto = true
codegen-units = 1

[workspace]
members = [
  "rem_math_gpu", "rem_math_simd",
]
